--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,18 +28,20 @@
   overflow: hidden;
   padding-top: 20px;
   transition: transform 300ms ease;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
 }
 /* .center_div:hover {
   -webkit-transform: scale(1.1) perspective(1500px) rotateY(10deg);
   transform: scale(1.1) perspective(1500px) rotateY(10deg);
 } */
 
-/* .date-container {
+.date-container {
   float: left;
-  margin-left: 2vw;
-} */
+
+  list-style: none;
+}
+
 @media (max-width: 600px) {
   .center_div {
     width: 87vw;
@@ -59,10 +61,12 @@ input::placeholder {
 
 .Hotbg {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  /* top: 38.6%;
+  left: 50%; */
 
   transform: translate(-50%, -50%);
+  margin-left: 25vh;
+  margin-top: 10vh;
   background: linear-gradient(135deg, #72edf2 10%, #5151e5 100%);
   height: 6vh;
   border-radius: 40px;
@@ -115,7 +119,7 @@ a {
   width: 0px;
   font-weight: bold;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .Hotbg-btn {
     width: 10vw;
     height: 5vh;
@@ -128,4 +132,29 @@ a {
   .Hotbg {
     height: 8.1vh;
   }
+}
+
+/* last part-2 */
+
+.dates {
+  width: 100px;
+  /* margin-left: 20px;
+  margin-right: 20vw; */
+  margin-top: 60vh;
+}
+
+.time {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 200px;
+  margin-left: 20px;
+}
+.downtime {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 200px;
+  margin-left: 20px;
+  margin-top: 42vh;
 }
